# neural-network

./: ActivationFunction.java  Layer.java  Main.java  Matrix.java  NeuralNetwork.java  Neuron.java  ReLUActivation.java  SigmoidActivation.java  SoftmaxActivation.java
rust/: Cargo.toml  README.md
rust/examples/: binary_addition.rs  function_approximation.rs  multi_class_classification.rs  simplified_mnist.rs  time_series_prediction.rs  xor.rs
rust/src/: activation.rs  layer.rs  lib.rs  matrix.rs  neural_network.rs
